Fix freedom h3 left align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,7 +210,7 @@ main {
 #info_3 h3 {
     padding-top: 10px;
     margin-bottom: 0px;
-    text-align: center;
+    text-align: left;
     font-size: larger;
 }
 
